Removed 1.4 JDK dependency.  Naughty Joe!